--- a/itinera/src/main/resources/application.properties
+++ b/itinera/src/main/resources/application.properties
@@ -11,3 +11,12 @@ jwt.expiration.ms=1800000
 logging.level.org.springframework.security=TRACE
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.admin.auto-create=true
+spring.kafka.consumer.group-id=groupId
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+
