create event schemas

--- a/itinera/pom.xml
+++ b/itinera/pom.xml
@@ -13,6 +13,7 @@
     <name>Itinera Parent</name>
 
     <modules>
+        <module>common</module>
         <module>trip-service</module>
         <module>auth-service</module>
         <module>traveller-service</module>
