--- a/itinera/place-service/pom.xml
+++ b/itinera/place-service/pom.xml
@@ -31,6 +31,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-webmvc</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.itinera</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
