--- a/itinera/trip-service/pom.xml
+++ b/itinera/trip-service/pom.xml
@@ -49,6 +49,10 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
+            <groupId>com.itinera</groupId>
+            <artifactId>common</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa-test</artifactId>
             <scope>test</scope>
@@ -63,6 +67,7 @@
             <artifactId>spring-boot-starter-webmvc-test</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <build>
